kubernetes/transaction-summary-k8s.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transaction-summary-deployment
spec:
  selector:
    matchLabels:
      app: transaction-summary
  template:
    metadata:
      labels:
        app: transaction-summary
        postgres-net: "true"
        kafka-net: "true"
    spec:
      containers:
      - name: transaction-summary
        image: vijaykdotcom/transaction-summary:latest
        volumeMounts:
        - name: logs-volume
          mountPath: /logs
      volumes:
      - name: logs-volume
        hostPath:
          path: ./logs
          type: DirectoryOrCreate
