kubernetes/zookeeper-k8s.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zookeeper-deployment
spec:
  selector:
    matchLabels:
      app: zookeeper
  template:
    metadata:
      labels:
        app: zookeeper
        kafka-net: "true"
    spec:
      containers:
      - name: zookeeper
        image: confluentinc/cp-zookeeper:5.1.4
        ports:
        - containerPort: 2181
---
apiVersion: v1
kind: Service
metadata:
  name: zookeeper-service
spec:
  type: LoadBalancer
  selector:
    app: zookeeper
  ports:
  - port: 2181
    targetPort: 2181
