kubernetes/kafka-k8s.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-deployment
spec:
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
        kafka-net: "true"
    spec:
      containers:
      - name: kafka
        image: confluentinc/cp-kafka:5.1.4
        ports:
        - containerPort: 9092
        - containerPort: 29092
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-service
spec:
  type: LoadBalancer
  selector:
    app: kafka
  ports:
  - name: "9092"
    port: 9092
    targetPort: 9092
  - name: "29092"
    port: 29092
    targetPort: 29092
---
apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
  name: kafka-net
spec:
  podSelector:
    matchLabels:
      kafka-net: "true"
  ingress:
  - from:
    - podSelector:
        matchLabels:
          kafka-net: "true"

# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: kafka-service-internal
# spec:
#   type: ClusterIP
#   selector:
#     app: kafka
#   ports:
#   - port: 29092
#     targetPort: 29092
