kubernetes/postgres-k8s.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
spec:
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
        postgres-net: "true"
    spec:
      containers:
      - name: postgres
        image: postgres:12
        ports:
        - containerPort: 5432
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
spec:
  type: LoadBalancer
  selector:
    app: postgres
  ports:
  - port: 5432
    targetPort: 5432
---
apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
  name: postgres-net
spec:
  podSelector:
    matchLabels:
      postgres-net: "true"
  ingress:
  - from:
    - podSelector:
        matchLabels:
          postgres-net: "true"
